# llm-model-probe

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-05-01-implementation-plan.md  2026-05-01-ui-implementation-plan.md  2026-05-02-probe-redesign-plan.md  2026-05-04-public-deploy-plan.md  2026-05-04-tier1-plan.md  2026-05-05-model-row-polish-plan.md  2026-05-06-ai-paste-parser.md  2026-05-06-endpoint-edit-and-url-normalize-plan.md  2026-05-07-registry-export-import-plan.md  2026-05-13-model-grouping-plan.md
docs/specs/: 2026-05-01-design.md  2026-05-01-ui-design.md  2026-05-02-probe-redesign-design.md  2026-05-04-public-deploy-design.md  2026-05-04-tier1-design.md  2026-05-05-model-row-polish-design.md  2026-05-06-ai-paste-parser-design.md  2026-05-06-endpoint-edit-and-url-normalize-design.md  2026-05-07-registry-export-import-design.md  2026-05-13-model-grouping-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  (+8 more)
tests/: conftest.py  test_api_ai_parse.py  test_api_auth.py  test_api_endpoints.py  test_api_meta.py  test_api_parse.py  test_api_registry_dump.py  test_api_settings_parser.py  test_app_settings_store.py  test_cli.py  test_cli_dump_load.py  test_parser_prompt.py  test_paths.py  test_probe_filter.py  test_providers.py  test_providers_complete.py  test_registry_io.py  test_report.py  test_settings.py  test_smoke.py  test_store.py  test_url_normalize.py
(+25 files in other folders)
